--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_LOCALHOST=http://localhost:3000
-REACT_APP_SERVER_URL=http://localhost:4000
+REACT_APP_SERVER_URL=https://trusted-traveling-piranha.glitch.me
